# pocketforge

./: PocketForge_Documentation_Report.md  PocketForge_Final_Report.md  README.md  backend_source.txt  backend_source_v2.txt  build.gradle.kts  deploy_backend.sh  extension_architecture.md  extension_architecture_v2.md  extension_enhancement_details.md  final_ide_ui_mockup_description.md  frontend_source.txt  frontend_source_v2.txt  gemini_integration_architecture.md  marketing_copy.md  project_tree.txt  settings.gradle.kts  stripe_workflow.md  submission_checklist.md  ui_mockup_description.md  web_deployment_guide.md
backend/: Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
backend/src/api/: ai.rs  ai_models.rs  auth.rs  containers.rs  extensions.rs  health.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: flyio.rs  mcp.rs  mod.rs  stripe.rs  supabase.rs
devops/.github/workflows/: ci-cd.yml
frontend/: build.gradle.kts
frontend/android/src/main/kotlin/com/pocketforge/: Platform.android.kt
frontend/common/src/kotlin/: App.kt
frontend/common/src/kotlin/com/pocketforge/extensions/: ExtensionHost.kt
frontend/common/src/kotlin/com/pocketforge/models/: Extension.kt
frontend/common/src/kotlin/com/pocketforge/viewmodel/: ExtensionViewModel.kt  TerminalViewModel.kt
frontend/desktop/src/main/kotlin/com/pocketforge/: Platform.desktop.kt
frontend/gradle/: libs.versions.toml
frontend/ios/src/main/kotlin/com/pocketforge/: Platform.ios.kt
frontend/web/src/main/kotlin/com/pocketforge/: Platform.web.kt
(+4 files in other folders)
