[package]
name = "pocketforge_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and Auth (Supabase/Postgres)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security and Authentication
jsonwebtoken = "9.2"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"

# Container Management (Fly.io/Firecracker) - Using a simple HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# AI Agent MTC Server
tungstenite = "0.21"
url = "2.5"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
